# sbc-orbika-qa-modern-backend-commons

./: Jenkinsfile  README.md  pyproject.toml  pytest.ini  sonar-project.properties  testFiles.json
src/orbika/commons/conf/aws/: conf_data_connection_aws.py
src/orbika/commons/conf/database/: conf_data_connection.py
src/orbika/commons/conf/login/: conf_login.py
src/orbika/commons/endpoints/: README.md
src/orbika/commons/endpoints/headers_validate/: endpoints_headers_validate.py
src/orbika/commons/endpoints/login/: endpoints_post_login.py
src/orbika/commons/exceptions/email/: exceptions_validate_email_massive_dynamo.py
src/orbika/commons/exceptions/headers/: exceptions_validate_headers_massive.py
src/orbika/commons/exceptions/login/: exceptions_login.py
src/orbika/commons/exceptions/response_validator/: exceptions_response_validator.py
src/orbika/commons/factories/: factory_scenario.py
src/orbika/commons/facts/aws/: fact_conditions_test_aws.py
src/orbika/commons/facts/database/: fact_conditions_test_database_security.py
src/orbika/commons/features/login/: sec_associate_fotware_token.py  sec_get_permissions.py  sec_login_user_service.py  sec_user_auth_mfa.py  sec_validate_login_service.py
src/orbika/commons/fixture/login/: fixture_login.py
src/orbika/commons/models/email/: models_email_validate.py
src/orbika/commons/models/headers/: models_headers_validate.py
src/orbika/commons/tasks/global_tasks/: tasks_security.py
src/orbika/enums/: README.md
src/orbika/models/: README.md
src/resources/data/qa/: test_cases_headers_login.json
(+23 files in other folders)
