[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sbc-orbika-qa-modern-backend-commons"
version = "0.1.0"
description = "Shared commons library for modern backend QA automation"
authors = [{name = "luis rodriguez", email = "lusrodriguez@subocol.com"}]
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0",
    "requests>=2.28.0"
]

[project.entry-points.pytest11]
sbc_qa_automation = "src.orbika.commons.fixture.login_fixture"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]